<resources>
    <string name="app_name">MnayaFerreteria</string>

    <!--LOGIN-->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="acceder">Acceder</string>

    <!--MENUS-->
    <string name="articulos">Artículos</string>
    <string name="articulosAdmin">Administrar artículos</string>
    <string name="registroArticulo">Registrar artículos</string>
    <string name="todos">Todos</string>
    <string name="cuenta">Administrar cuenta</string>
    <string name="usuariosAdmin">Administrar usuarios</string>
    <string name="registroUsuario">Registrar usuarios</string>
    <string name="herramientas">Herramientas</string>
    <string name="jardin">Jardín</string>
    <string name="menaje">Menaje</string>
    <string name="iluminacion">Iluminación</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!--AVISOS-->
    <string name="datos_acceso_title">Datos de acceso</string>
    <string name="datos_acceso_mensaje">Usuario o contraseña incorrectos</string>
    <string name="campo_obligatorio_title">Campo obligatorio</string>
    <string name="error_logado_title">Error en el logado</string>
    <string name="error_logado_mensaje">No se ha recibido información de los permisos de la cuenta</string>
    <string name="eliminar_articulo_title">Eliminación de artículo</string>
    <string name="eliminar_articulo_message">¿Está seguro de que desea eliminar el artículo seleccionado?</string>
    <string name="eliminar_articulo_confirmado">Se ha eliminado el artículo correctamente</string>
    <string name="eliminar_articulo_error">Ha habido un error. No se ha completado la eliminación del artículo.</string>

    <!--PRINCIPAL-->
    <string name="categoria">Categoría</string>
    <string name="descripcion">Descripción</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="ultimos_registrados">Últimos productos registrados</string>

    <!--DETALLE ARTÍCULO-->
    <string name="detalle_articulo">Detalle artículo</string>
    <string name="nombre_detalle">Nombre:</string>
    <string name="categoriaDetalle">Categoría:</string>
    <string name="descripcionDetalle">Descripción:</string>
    <string name="precio_detalle">Precio:</string>
    <string name="stock_detalle">Stock:</string>
    <string name="origenDetalle">Origen:</string>
    <string name="id_detalle">ID:</string>
    <string name="nacional">Nacional</string>
    <string name="internacional">Internacional</string>

    <!--REGISTRO ARTICULO-->
    <string name="reg_art_toolbar_title">Registrar artículo</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="stock">Stock</string>
    <string name="origen">Origen</string>
    <string name="registrar">Registrar</string>

    <!--SPINNER CATEGORÍA-->
    <string-array name="categorias">
        <item name="seleccioneSpin">Seleccione</item>
        <item name="herramientasSpin">Herramientas</item>
        <item name="menajeSpin">Menaje</item>
        <item name="iluminacionSpin">Iluminación</item>
        <item name="jardinSpin">Jardín</item>
    </string-array>

    <!--SPINNER CATEGORÍA-->
    <string-array name="tipos">
        <item name="seleccioneSpin">Seleccione</item>
        <item name="Admin">Admin</item>
        <item name="User">Usuario</item>
    </string-array>

    <!--USUARIO DETALLE-->
    <string name="nomDet">Nombre:</string>
    <string name="apeDet">Apellidos:</string>
    <string name="edaDet">Edad:</string>
    <string name="pasDet">Contraseña:</string>
    <string name="tipDet">Tipo:</string>
    <string name="detalle_usuario">Detalle usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="tipo">Tipo</string>

    <!-- REGISTRO USUARIO -->
    <string name="reg_usuario_toolbar_title">Registrar usuario</string>
    <string name="usuario_detalle">Usuario:</string>
    <string name="password_detalle">Contraseña:</string>
</resources>