<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemArticulos"
        android:title="@string/articulos">

        <menu>
            <item
                android:id="@+id/todos"
                android:title="@string/todos" />
            <item
                android:id="@+id/subitemHerramientas"
                android:title="@string/herramientas" />
            <item
                android:id="@+id/subitemJardin"
                android:title="@string/jardin" />
            <item
                android:id="@+id/subitemMenaje"
                android:title="@string/menaje" />
            <item
                android:id="@+id/subitemIluminacion"
                android:title="@string/iluminacion" />
        </menu>

    </item>

    <item
        android:id="@+id/itemCuenta"
        android:title="@string/cuenta" />
    <item
        android:id="@+id/itemCerrarSesion"
        android:title="@string/cerrar_sesion" />

</menu>