<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopantalla"
    tools:context=".activities.RegistroArticulo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegistroArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#165873"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/reg_art_toolbar_title"
        app:titleTextColor="#C9F2F2" />

    <LinearLayout
        android:id="@+id/layoutRegistroArticulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegistroArticulo">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nombre_detalle"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/textRegisNombreArt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/nombre"
            android:textColor="@color/black"
            android:textColorHint="#959090" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/categoriaDetalle"
            android:textColor="#C9F2F2" />

        <Spinner
            android:id="@+id/spinnerRegCat"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/spinner_con_flecha"
            android:dropDownSelector="@android:color/transparent"
            android:foregroundTint="@color/black"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown"
            android:tag="@string/categoria" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/descripcionDetalle"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/textRegisDescArt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text|textImeMultiLine"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/descripcion"
            android:textColor="@color/black"
            android:textColorHint="#959090" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/precio_detalle"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/textRegisPrecioArt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="number|numberDecimal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/precio"
            android:textColor="@color/black"
            android:textColorHint="#959090" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/stock_detalle"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/textRegisStockArt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:hint="@string/stock"
            android:inputType="number|numberSigned"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/stock"
            android:textColor="@color/black"
            android:textColorHint="#959090" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/origenDetalle"
            android:textColor="#C9F2F2" />

        <RadioGroup
            android:id="@+id/groupRadioOrigenReg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="@string/origen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioNacionalReg"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nacional"
                    android:textColor="#C9F2F2" />

                <RadioButton
                    android:id="@+id/radioInterReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/internacional"
                    android:textColor="#C9F2F2" />
            </LinearLayout>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegArt"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#165873"
        android:text="@string/registrar"
        android:textColor="#C9F2F2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRegistroArticulo" />
</androidx.constraintlayout.widget.ConstraintLayout>