<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopantalla"
    tools:context=".activities.RegistroUsuario">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegistroUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#165873"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/reg_usuario_toolbar_title"
        app:titleTextColor="#C9F2F2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegistroUsuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/layoutRegistroUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="40dp"
                android:paddingEnd="40dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/usuario_detalle"
                    android:textColor="#C9F2F2" />

                <EditText
                    android:id="@+id/textRegisUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edittext_redondeado"
                    android:ems="10"
                    android:hint="@string/usuario"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:tag="@string/usuario"
                    android:textColor="@color/black"
                    android:textColorHint="#959090" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nombre_detalle"
                    android:textColor="#C9F2F2" />

                <EditText
                    android:id="@+id/textRegisNombre"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edittext_redondeado"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:tag="@string/nombre"
                    android:textColor="@color/black"
                    android:textColorHint="#959090" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/apeDet"
                    android:textColor="#C9F2F2" />

                <EditText
                    android:id="@+id/textRegisApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edittext_redondeado"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:tag="@string/apellidos"
                    android:textColor="@color/black"
                    android:textColorHint="#959090" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/edaDet"
                    android:textColor="#C9F2F2" />

                <EditText
                    android:id="@+id/textRegisEdad"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edittext_redondeado"
                    android:ems="10"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:tag="@string/edad"
                    android:textColor="@color/black"
                    android:textColorHint="#959090" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password_detalle"
                    android:textColor="#C9F2F2" />

                <EditText
                    android:id="@+id/textRegisPassword"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/edittext_redondeado"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:tag="@string/password"
                    android:textColor="@color/black"
                    android:textColorHint="#959090" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/tipDet"
                    android:textColor="#C9F2F2" />

                <Spinner
                    android:id="@+id/spinnerRegisTipo"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/spinner_con_flecha"
                    android:dropDownSelector="@drawable/dropdown_selector"
                    android:paddingStart="12dp"
                    android:paddingEnd="40dp"
                    android:popupBackground="@android:color/white"
                    android:spinnerMode="dropdown"
                    android:tag="@string/tipo" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegUsuario"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="45dp"
                android:backgroundTint="#165873"
                android:text="@string/registrar"
                android:textColor="#C9F2F2"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>