<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopantalla"
    tools:context=".activities.UsuarioDetalle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#165873"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/detalle_usuario"
        app:titleTextColor="#C9F2F2" />

    <LinearLayout
        android:id="@+id/layoutDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetUser">

        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#C9F2F2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nomDet"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/nombre"
            android:text="Name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/apeDet"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/editTextApellidos"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/apellidos"
            android:text="Name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edaDet"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/editTextEdad"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/edad"
            android:text="Name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pasDet"
            android:textColor="#C9F2F2" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_redondeado"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:tag="@string/password"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tipDet"
            android:textColor="#C9F2F2" />

        <Spinner
            android:id="@+id/spinnerDetUser"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_con_flecha"
            android:dropDownSelector="@drawable/dropdown_selector"
            android:paddingStart="12dp"
            android:paddingEnd="40dp"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown"
            android:tag="@string/tipo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDetalles">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingEditUser"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="#3983A3"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingEnviar"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false"
            app:backgroundTint="#3983A3"
            app:srcCompat="@android:drawable/ic_menu_send" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingDeleteUser"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="#3983A3"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>